<resources>
    <string name="app_name">PolluGuard</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_volunteer">Volunteer</string>
    <string name="title_map">Map</string>
    <string name="title_discover">Discover</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>