<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.polluguard.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_to_map"
            app:destination="@id/navigation_map" />
        <action
            android:id="@+id/home_to_volunteer"
            app:destination="@id/navigation_volunteer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_volunteer"
        android:name="com.example.polluguard.ui.volunteer.VolunteerFragment"
        android:label="@string/title_volunteer"
        tools:layout="@layout/fragment_volunteer" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.polluguard.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.polluguard.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.polluguard.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>